# Spelunky2X64DbgPlugin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake.toml
.github/workflows/: autobuild.yml  clang-format.yml  continous_integration.yml  json-parser.yml  prettier.yml
cmake/: msvc-static-runtime.cmake  x64dbg.cmake
include/: Configuration.h  Overlunky.h  QtPlugin.h  Spelunky2.h  ViewEntity.h  ViewEntityDB.h  ViewState.h  ViewToolbar.h  make_unsigned_integer.h  pluginmain.h  read_helpers.h
include/Data/: CPPGenerator.h  CharacterDB.h  Entity.h  EntityDB.h  EntityList.h  GameManager.h  IDNameList.h  JournalPage.h  LevelGen.h  Logger.h  MemoryMappedData.h  Online.h  ParticleDB.h  ParticleEmittersList.h  SaveGame.h  State.h  StdMap.h  StdString.h  StringsTable.h  Texture.h  TextureDB.h  VirtualTableLookup.h
include/QtHelpers/: CPPSyntaxHighlighter.h  DatabaseHelper.h  DialogEditSimpleValue.h  DialogEditState.h  HTMLDelegate.h  ItemModelGatherVirtualData.h  ItemModelLoggerFields.h  ItemModelLoggerSamples.h  ItemModelStates.h  ItemModelStringsTable.h  ItemModelVirtualFunctions.h  ItemModelVirtualTable.h  SortFilterProxyModelStringsTable.h  StyledItemDelegateColorPicker.h  TableViewLogger.h  TableWidgetItemNumeric.h  TreeViewMemoryFields.h  TreeWidgetItemNumeric.h  WidgetMemoryView.h  WidgetSamplesPlot.h  WidgetSpelunkyLevel.h  WidgetSpelunkyRooms.h
include/Views/: ViewCharacterDB.h  ViewEntities.h  ViewEntity.h  ViewEntityDB.h  ViewGameManager.h  ViewJournalPage.h  ViewLevelGen.h  ViewLogger.h  ViewOnline.h  ViewParticleDB.h  ViewSaveGame.h  ViewState.h  ViewStdMap.h  ViewStdVector.h  ViewStringsTable.h  ViewTextureDB.h  ViewThreads.h  ViewToolbar.h  ViewVirtualFunctions.h  ViewVirtualTable.h
resources/: Spelunky2.json  Spelunky2Entities.json  Spelunky2Entities.txt  Spelunky2RoomCodes.json  Spelunky2Seeds.json  Spelunky2VirtualTableData.json  cpp_from_json.py  json_validator.py  qt_download_helper.py  spelunky2.qrc
src/: Configuration.cpp  Configuration.h  EntityList.cpp  QtPlugin.cpp  Spelunky2.cpp  Spelunky2.h  ViewEntity.cpp  ViewEntityDB.cpp  ViewState.cpp  ViewToolbar.cpp  pluginmain.cpp  pluginmain.h  read_helpers.cpp
src/Data/: CPPGenerator.cpp  CPPGenerator.h  CharacterDB.cpp  Entity.cpp  Entity.h  EntityDB.cpp  EntityList.cpp  EntityList.h  GameManager.cpp  GameManager.h  IDNameList.cpp  IDNameList.h  JournalPage.cpp  JournalPage.h  LevelGen.cpp  LevelGen.h  Logger.cpp  Lookup.cpp  MemoryMappedData.cpp  Online.cpp  ParticleDB.cpp  ParticleDB.h  ParticleEmittersList.cpp  ParticleEmittersList.h  SaveGame.cpp  State.cpp  State.h  StdString.h  StringsTable.cpp  StringsTable.h  Texture.cpp  TextureDB.cpp  TextureDB.h  VirtualTableLookup.cpp  VirtualTableLookup.h
src/QtHelpers/: CPPSyntaxHighlighter.cpp  CPPSyntaxHighlighter.h  DatabaseHelper.cpp  DialogEditSimpleValue.cpp  DialogEditState.cpp  DialogEditState.h  HTMLDelegate.cpp  ItemModelGatherVirtualData.cpp  ItemModelGatherVirtualData.h  ItemModelLoggerFields.cpp  ItemModelLoggerSamples.cpp  ItemModelStates.cpp  ItemModelStringsTable.cpp  ItemModelVirtualFunctions.cpp  ItemModelVirtualTable.cpp  ItemModelVirtualTable.h  SortFilterProxyModelStringsTable.cpp  StyledItemDelegateColorPicker.cpp  StyledItemDelegateHTML.cpp  StyledItemDelegateHTML.h  TableViewLogger.cpp  TableWidgetItemNumeric.cpp  TableWidgetItemNumeric.h  TreeViewMemoryFields.cpp  TreeWidgetItemNumeric.cpp  WidgetMemoryView.cpp  WidgetMemoryView.h  WidgetSamplesPlot.cpp  WidgetSamplesPlot.h  WidgetSampling.cpp  WidgetSampling.h  WidgetSpelunkyLevel.cpp  WidgetSpelunkyLevel.h  WidgetSpelunkyRooms.cpp  WidgetSpelunkyRooms.h
src/Views/: ViewCharacterDB.cpp  ViewEntities.cpp  ViewEntity.cpp  ViewEntity.h  ViewEntityDB.cpp  ViewEntityDB.h  ViewGameManager.cpp  ViewGameManager.h  ViewJournalPage.cpp  ViewLevelGen.cpp  ViewLevelGen.h  ViewLogger.cpp  ViewOnline.cpp  ViewOnline.h  ViewParticleDB.cpp  ViewSaveGame.cpp  ViewSaveGame.h  ViewState.cpp  ViewState.h  ViewStdMap.cpp  ViewStdVector.cpp  ViewStdVector.h  ViewStringsTable.cpp  ViewTextureDB.cpp  ViewThreads.cpp  ViewToolbar.cpp  ViewToolbar.h  ViewVirtualFunctions.cpp  ViewVirtualTable.cpp  ViewVirtualTable.h
x64dbg-src/: commithash.txt
